[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "boilr-pv"
dynamic = ["version"]
description = "Water boiler automation with a Fronius pv inverter on a Raspberry Pi."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Peter Loecker", email = "peter.loecker@live.at"},
]
keywords = ["boiler", "pv", "photovoltaic", "solar", "solar-energy", "fronius-solar-api", "fronius", "fronius-inverter", "ohmpilot", "waterheater", "raspberry-pi", "raspberrypi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Natural Language :: German",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Topic :: Home Automation",
  "Topic :: Software Development",
  "Topic :: System :: Hardware"
]
requires-python = ">= 3.8, <3.11"
dependencies = [
    "paho-mqtt",
    "python-daemon",
    "PyYAML",
    "requests",
    "RPi.GPIO; platform_system=='Linux' and 'arm' in platform_machine",
    "urllib3",
]

[project.urls]
Homepage = "https://github.com/PeterBrain/boilr"
Documentation = "https://github.com/PeterBrain/boilr"
Source = "https://github.com/PeterBrain/boilr"
Issues = "https://github.com/PeterBrain/boilr/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
boilr = "boilr.__main__:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"
write_to = "boilr/_version.py"
fallback_version = "0.0.1"

[tool.pytest]
addopts = "-v"
